tests/neg/erased-case-class.scala
case class Foo1 erased (x: Int) // error // error
